--- a/src/config/.env.production
+++ b/src/config/.env.production
@@ -14,3 +14,4 @@ TWILIO_ACCOUNT_SID = "AC456f706290998aec5ccece9f49a08827"
 TWILIO_AUTH_TOKEN = "1aaf453a862dcb50aa10093d382f7b2c"
 PREMIUM_EMAIL: "premium@user.com"
 PREMIUM_PASSWORD: "premium13"
+GET_INACTIVE_USERS_DAYS: 14
