--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "ProductManager.js",
   "scripts": {
+    "start": "npm run dev",
     "dev": "nodemon app.js"
   },
   "author": "",
